cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_433.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/req.c:1303: error: DEAD_STORE
  The value written to &p (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/req.c:1303:9: Write of unused value
1301.           int mval;
1302.           v = sk_CONF_VALUE_value(dn_sk, i);
1303.           p = q = NULL;
                ^
1304.           type = v->name;
1305.           /*
